@@ -261,14 +261,6 @@ class IO::Socket extends IO::Handle {
     return $self->recv($string, $length, 0, $offset);
   }
   
-  method syswrite : int ($string : string, $length : int = -1, $offset : int = 0) {
-    return $self->send($string, 0, undef, $length, $offset);
-  }
-  
-  method sysread : int ($string : mutable string, $length : int = -1, $offset : int = 0) {
-    return $self->recv($string, $length, 0, $offset);
-  }
-  
   private method socket : void () {
     
     my $domain = $self->{Domain};
